--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <img src="https://perafreess.pages.dev/img/live.png" alt="Imagen Superpuesta 1" class="superpuesta superpuesta1 visible">
 
 <!-- Segunda imagen superpuesta -->
-<a href="https://feeldatetop.life/?u=06lpaew&o=17ykp98&t=1603P">
+<a href="https://lovelymatches.life/?u=60380kv&o=un3dhu4&t=1603P">
     <img src="https://perafreess.pages.dev/img/Tap%20to%20chat%20marco.svg" alt="Imagen Superpuesta 2" class="superpuesta superpuesta2 visible">
 </a>
     </div>
@@ -84,7 +84,7 @@
                     <div class="videoFooter__ticker">
                         <ul class="boddbtno" style="margin-left:30px;">
                           <a class="downloadbtno" href="#" onclick="recargarPagina();"><i class="fa fa-camera" aria-hidden="true"></i> NEXT</a>
-                            <li><a class="downloadbtno" href="https://feeldatetop.life/?u=06lpaew&o=17ykp98&t=1603P">
+                            <li><a class="downloadbtno" href="https://lovelymatches.life/?u=60380kv&o=un3dhu4&t=1603P">
                             <span class="loader" style="margin-right: 5px"></span>
                             <i class="fa fa-video-camera" aria-hidden="true"></i> LIVE SEX</a></li>
                         </ul>
